# logflare-api

./: .gitignore  CHANGELOG.md  Cargo.toml  Earthfile  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs
src/server/: routes.rs
src/server/lib/: logflare_client.rs  mod.rs  structs.rs
